# euclus

./: .env  Cargo.toml  diesel.toml
crates/core/euclus/: Cargo.toml
crates/core/euclus/src/: main.rs
migrations/2024-01-28-080101_create_users_table/: up.sql
migrations/2024-01-28-091151_create_texts_table/: down.sql  up.sql
migrations/2024-01-28-091752_create_pages_table/: down.sql  up.sql
migrations/2024-01-28-105310_create_revisions_table/: down.sql  up.sql
migrations/2024-01-28-124302_alter_pages_table_foreign_key_constraint/: down.sql  up.sql
migrations/2024-01-28-130100_create_contents_table/: down.sql  up.sql
migrations/2024-01-28-132537_create_slot_roles_table/: down.sql  up.sql
migrations/2024-01-28-133005_insert_default_slot_roles/: down.sql  up.sql
migrations/2024-01-28-133125_create_slots_table/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
