[package]
name = "euclus"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }

tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7.4", features = ["tokio", "json"] }

diesel = { version = "2.1.4", features = ["postgres"] }

dotenvy = { version = "0.15.7" }
